--- a/src/styles/settings/colors.scss
+++ b/src/styles/settings/colors.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 :root {
-    // Couleur de base
+    // Couleur neutres de base
     --color-white: #fff;
     --color-black: #000;
 
